testdata/baselines/reference/submodule/compiler/inheritedConstructorPropertyContextualType.errors.txt
inheritedConstructorPropertyContextualType.ts(7,7): error TS2415: Class 'Assignment' incorrectly extends base class 'Base<State>'.
  The types of 'state.version' are incompatible between these types.
    Type 'number' is not assignable to type '2'.


==== inheritedConstructorPropertyContextualType.ts (1 errors) ====
    interface State {
        version: 2
    }
    declare class Base<S> {
        state: S
    }
    class Assignment extends Base<State> {
          ~~~~~~~~~~
!!! error TS2415: Class 'Assignment' incorrectly extends base class 'Base<State>'.
!!! error TS2415:   The types of 'state.version' are incompatible between these types.
!!! error TS2415:     Type 'number' is not assignable to type '2'.
        constructor() {
            super()
            this.state = { version: 2 }
        }
    }